Qwen2_5_VLImageTransform complete

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Notes
+*qwen2_5_vision/context.md
+*qwen2_5_vision/*test*
+
 # Derived from basic .gitignore template for python projects:
 #   https://github.com/github/gitignore/blob/main/Python.gitignore
 # Please maintain the alphabetic order of the section titles
