--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 name = "torchtune"
 description = "PyTorch native post-training library"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {file = "LICENSE"}
 authors = [
     { name = "PyTorch Team", email = "packages@pytorch.org" },
@@ -12,29 +12,28 @@ keywords = ["pytorch", "post-training", "rlhf", "finetuning", "llm"]
 dependencies = [
     # Stable torchdata (no nightly support)
     "torchdata",
-
     # Hugging Face integrations
     "datasets",
     "huggingface_hub[hf_transfer]",
     "safetensors",
-
     # Kaggle Integrations
     "kagglehub",
-
     # Tokenization
     "sentencepiece",
     "tiktoken",
     "blobfile>=2",
     "tokenizers",
-
     # Miscellaneous
     "numpy",
     "tqdm",
     "omegaconf",
     "psutil",
-
     # Multimodal
     "Pillow>=9.4.0",
+    "torchvision>=0.21.0",
+    "torchao>=0.11.0",
+    "transformers>=4.52.4",
+    "pytest>=7.4.0",
 ]
 dynamic = ["version"]
 
